--- a/Bio.html
+++ b/Bio.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand teammar" href="Home.html">CyberTech Inc.<a href="#" class="pull-left lightmar"></a>
+                    <a class="navbar-brand teammar" href="index.html">CyberTech Inc.<a href="#" class="pull-left lightmar"></a>
                 </div>
                 <div class="collapse navbar-center navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
